# hyperopt-sklearn

./: .gitignore  LICENSE.txt  README.md  README.txt  index.html  params.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
hpsklearn/: __init__.py  __init__.py.bak  components.py  demo_support.py  estimator.py  hp_compat.py  hpcv.py  lagselectors.py  notworking.py  perceptron.py  small_img.py  thread2.py  vkmeans.py
hpsklearn/components/: __init__.py  _base.py  discriminant_analysis.py  dummy.py  kernel_ridge.py  lagselectors.py  lightgbm.py  multiclass.py  naive_bayes.py  vkmeans.py  xgboost.py
hpsklearn/components/cluster/: __init__.py  _kmeans.py
hpsklearn/components/compose/: __init__.py  _target.py
hpsklearn/components/covariance/: __init__.py  _elliptic_envelope.py
hpsklearn/components/cross_decomposition/: __init__.py  _pls.py
hpsklearn/components/decomposition/: __init__.py  _pca.py
hpsklearn/components/ensemble/: __init__.py  _bagging.py  _base.py  _forest.py  _gb.py  _hist_gradient_boosting.py  _iforest.py  _stacking.py  _voting.py  _weight_boosting.py
hpsklearn/components/feature_extraction/: __init__.py  text.py
hpsklearn/components/gaussian_process/: __init__.py  _gpc.py  _gpr.py
hpsklearn/components/linear_model/: __init__.py  _base.py  _bayes.py  _coordinate_descent.py  _glm.py  _huber.py  _least_angle.py  _logistic.py  _omp.py  _passive_aggressive.py  _perceptron.py  _quantile.py  _ransac.py  _ridge.py  _stochastic_gradient.py  _theil_sen.py
hpsklearn/components/mixture/: __init__.py  _bayesian_mixture.py  _gaussian_mixture.py
hpsklearn/components/neighbors/: __init__.py  _classification.py  _nearest_centroid.py  _regression.py
hpsklearn/components/neural_network/: __init__.py  _multilayer_perceptron.py
hpsklearn/components/preprocessing/: __init__.py  _data.py  _discretization.py  _encoders.py  _polynomial.py
hpsklearn/components/semi_supervised/: __init__.py  _label_propagation.py
hpsklearn/components/svm/: __init__.py  _classes.py
hpsklearn/components/tree/: __init__.py  _classes.py
hpsklearn/components/utils/: __init__.py  _testing.py
hpsklearn/estimator/: __init__.py  _cost_fn.py  _pfit.py  _transform.py  _utils.py  estimator.py
hpsklearn/objects/: __init__.py  lagselectors.py  vkmeans.py
hpsklearn/tests/: test_classification.py  test_demo.py  test_demo.py.bak  test_estimator.py  test_perceptron.py  test_preprocessing.py  test_regression.py  test_small_img.py  test_stories.py  test_ts.py  utils.py
hpsklearn/tests/components/: test_discriminant_analysis.py  test_dummy.py  test_kernel_ridge.py  test_lightgbm.py  test_multiclass.py  test_naive_bayes.py  test_xgboost.py
notebooks/: Demo-CIFAR10.ipynb  Demo-Convex.ipynb  Demo-Iris.ipynb  Demo-MNIST.ipynb  skdata_quick_intro.ipynb  start_ipython.sh
papers/2014-automl/: .gitignore  Makefile  algorithm2e.sty  bib.bib  jmlr.cls  paper.tex
tests/: utils.py
tests/components/: test_lagselectors.py  test_naive_bayes.py  test_xgboost.py
tests/components/cluster/: test_kmeans.py
tests/components/cross_decomposition/: test_pls.py
tests/components/ensemble/: test_forest.py  test_hist_gradient_boosting.py  test_iforest.py
tests/components/linear_model/: test_base.py  test_bayes.py  test_least_angle.py  test_logistic.py  test_stochastic_gradient.py
tests/components/mixture/: test_bayesian_mixture.py
tests/components/neighbors/: test_nearest_centroid.py
tests/components/neural_network/: test_multilayer_perceptron.py
tests/components/preprocessing/: test_discretization.py  test_encoders.py
tests/components/tree/: test_classes.py
tests/estimator/: test_estimator.py
tests/test_components/: test_discriminant_analysis.py  test_dummy.py  test_kernel_ridge.py  test_lagselectors.py  test_lightgbm.py  test_multiclass.py  test_vkmeans.py
tests/test_components/test_compose/: test_target.py
tests/test_components/test_covariance/: test_elliptic_envelope.py
tests/test_components/test_cross_decomposition/: test_pls.py
tests/test_components/test_decomposition/: test_pca.py
tests/test_components/test_ensemble/: test_bagging.py  test_forest.py  test_gb.py  test_hist_gradient_boosting.py  test_iforest.py  test_weight_boosting.py
tests/test_estimator/: test_estimator.py
(+74 files in other folders)
