[metadata]
name = hpsklearn
version = 1.0.3
description = Hyperparameter Optimization for sklearn
long_description = file: README.md
url = http://hyperopt.github.com/hyperopt-sklearn/
author = James Bergstra
author_email = anon@anon.com
license = BSD
license_file = LICENSE.txt
platforms = Linux, OS-X, Windows
keywords = hyperopt, hyperparameter, sklearn
classifiers =
    Development Status :: 1.0.3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
packages =
    find:
install_requires =
    hyperopt>=0.2.6
    numpy>=1.26.0
    scikit-learn>=1.3.0
    scipy>=1.11.2
python_requires = >=3.9
zip_safe = False

[options.extras_require]
xgboost = xgboost>=2.0.0
lightgbm = lightgbm>=4.0.0
testing =
    tox>=4.11.3
