[metadata]
name = hpsklearn
version = 1.1.0
description = Hyperparameter Optimization for sklearn
long_description = file: README.md
url = http://hyperopt.github.com/hyperopt-sklearn/
author = James Bergstra
author_email = anon@anon.com
license = BSD
license_file = LICENSE.txt
platforms = Linux, OS-X, Windows
keywords = hyperopt, hyperparameter, sklearn
classifiers =
    Development Status :: 1.1.0 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
packages =
    find:
install_requires =
    hyperopt==0.2.7
    numpy>=2.0.0
    scikit-learn>=1.5,<=1.7
    scipy>=1.15.0
    pandas>=2.1.0
python_requires = >=3.11
zip_safe = False

[options.extras_require]
xgboost = xgboost>=2.0.0
lightgbm = lightgbm>=4.6.0
testing =
    tox>=4.20.0
    coverage==7.6.12
    pytest==8.3.5
    pytest-xdist==3.6.1
