[metadata]
name = hyperopt-sklearn
version = 1.1.1
description = Hyperparameter Optimization for sklearn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hyperopt/hyperopt-sklearn/
author = James Bergstra
author_email = anon@anon.com
maintainer = Pim Tholhuijsen
maintainer_email = anon@anon.com
license = BSD
license_files = LICENSE.txt
platforms = Linux, OS-X, Windows
keywords = hyperopt, hyperparameter, sklearn
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
packages = find:
install_requires =
    hyperopt==0.2.7
    numpy>=2.0.0,<=2.3.0
    scikit-learn>=1.5,<=1.7
    scipy>=1.15.0,<=1.15.3
    pandas>=2.1.0,<=2.3.0
    setuptools>=71.0.0
python_requires = >=3.11
zip_safe = False

[options.extras_require]
xgboost = xgboost>=2.0.0,<=2.2.0
lightgbm = lightgbm==4.6.0
testing =
    tox>=4.20.0
    coverage==7.6.12